Fix #965 - Reset button/item count overlaps search input query on fil… (#1007)
* Fix #965 - Reset button/item count overlaps search input query on filter bar

* Add logic to filter aliases if the search bar contains a query on page load, add logic to keep the reset button visible if the search bar contains a query, revise JS styles to toggle visibility classes instead of manipulating style.display,

* Fix issue where survey-dismiss may not exist

* Update lint rule to enforce quotes on URLs

--- a/static/scss/components/filter-bar.scss
+++ b/static/scss/components/filter-bar.scss
@@ -2,6 +2,12 @@
     display: flex;
     align-items: center;
     margin-bottom: $spacing-md;
+
+    .c-filter-search-form {
+        &.is-hidden {
+            display: none;
+        }
+    }
     
     &.is-search-active {
         margin-bottom: 4.5rem;
@@ -19,6 +25,7 @@
             width: 100%;
         }
     }
+    
 
     @media screen and (min-width: 768px) {
         justify-content: flex-end;
@@ -43,24 +50,39 @@
         position: relative;
     }
 
-    input[type="search"] {
-        background-image: url(/static/images/icon-search.svg);
+    .c-filter-search-input {
+        background-image: url("/static/images/icon-search.svg");
         margin-bottom: 0;
-        padding-right: 1.75rem;
-        &:focus + .c-filter-case-count {
-            opacity: .5;
-        }
-        &:focus + .c-filter-case-count + .c-filter-reset {
+        padding-right: 90px;
+        position: relative;
+        z-index: 0;
+        &.is-filtered + .c-filter-search-controls {
             opacity: 1;
         }
+
+        &:focus + .c-filter-search-controls {
+            opacity: 1;
+        }
+        &:focus, &:hover {
+            background-image: url("/static/images/icon-search-blue.svg");
+        }
+    }
+
+    .c-filter-search-controls {
+        position: absolute;
+        right: $spacing-sm;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        top: 0;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity .2s ease-out;
     }
 
     .c-filter-case-count {
         display: flex;
-        opacity: 0;
-        position: absolute;
-        right: 2.5rem;
-        top: 0;
+        margin-right: $spacing-sm;
         align-items: center;
         height: 100%;
         transition: opacity .2s ease-out;
@@ -106,23 +128,24 @@
 
 .c-filter-icon-search {
     background-size: auto 1.25rem;
-    background-image: url(/static/images/icon-search.svg);
+    background-image: url("/static/images/icon-search.svg");
     &.is-enabled, &:hover {
-        background-image: url(/static/images/icon-search-blue.svg);        
+        background-image: url("/static/images/icon-search-blue.svg");        
     }
 }
 
 .c-filter-icon-calendar {
-    background-image: url(/static/images/icon-calendar.svg);
+    background-image: url("/static/images/icon-calendar.svg");
     &.is-enabled, &:hover {
-        background-image: url(/static/images/icon-calendar-blue.svg);        
+        background-image: url("/static/images/icon-calendar-blue.svg");        
     }
 }
 
 .c-filter-icon-filter {
-    background-image: url(/static/images/icon-filter.svg);
+    background-image: url("/static/images/icon-filter.svg");
+           
     &.is-enabled, &:hover {
-        background-image: url(/static/images/icon-filter-blue.svg);        
+        background-image: url("/static/images/icon-filter-blue.svg");        
     }
 }
 
@@ -141,10 +164,6 @@
     outline: 0;
     appearance: none;
     border: 0;
-    position: absolute;
-    right: .5rem;
-    top: .5rem;
-    opacity: 0;
 
     img {
         width: 1rem;
