--- a/static/scss/partials/onboarding.scss
+++ b/static/scss/partials/onboarding.scss
@@ -36,7 +36,7 @@
 }
 
 .c-onboarding-step-number {
-    background: url(/static/images/dashboard-onboarding/shield.svg) center center no-repeat;
+    background: url("/static/images/dashboard-onboarding/shield.svg") center center no-repeat;
     background-size: contain;
     width: 100%;
     height: 45px;
